Fixed icon align

--- a/source/css/wouterj/generic/_icons.scss
+++ b/source/css/wouterj/generic/_icons.scss
@@ -15,4 +15,6 @@
 .icon{
     font-family:Batch;
     font-style:normal;
+    position:relative;
+    top:1px;
 }
